aligned center-mistake corrected

--- a/styles.css
+++ b/styles.css
@@ -215,18 +215,27 @@ h4 {
 .link:hover {
     text-decoration: underline;
 }
+.stp{
+    display: flex;
+align-items: center;
+justify-content: center;
+}
     .container-d {
     margin-top: 100px;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 40px;
     max-width: 900px;
     padding: 20px;
     border-radius: 10px;
-    justify-content: center;
-    margin-left: 200px;
+    
 }
-
+.what{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .steps {
     flex: 1;
 }
